--- a/dev/views/profileMain.html
+++ b/dev/views/profileMain.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="mininav">
                                 <button class="colorize">Details</button>
-                                <button>Uploaded Documents</button>
+                                <button>Documents</button>
                                 <button>Grades</button>
                             </div>
                         </div>
