--- a/dev/views/profileStudentDocuments.html
+++ b/dev/views/profileStudentDocuments.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/core.css">
     <link rel="stylesheet" href="../styles/profileMain.css">
     <link rel="stylesheet" href="../styles/profileStudentDocuments.css">
+    <link rel="stylesheet" href="../styles/customFileUploadComponent.css">
+    <link rel="stylesheet" href="../styles/customNoFilesUploaded.css">
 </head>
 
 <body>
@@ -75,13 +77,41 @@
                     </div>
 
                     <div class="lower-content">
-
-                        <div class="profile-documents-creator">
-                            <label for="">Add File:</label>
-                            <input type="file" multiple>
-                        </div>
-
                         <div class="profile-documents-container">
+
+                            <div class="profile-documents-creator">
+                                <div class="custom-file-upload-component">
+
+                                    
+                                        <div class="label-container">
+                                            <label>Select and upload a file</label>
+                                        </div>
+                                        <label for="fileUpload" class="custom-file-upload-btn">Select File
+                                            <input type="file" id="fileUpload"></input>
+                                        </label>
+                                        <div class="selected-file-name-container add-margin-top">
+                                            <span>Name of selected file.Name of selected file.Name of selected file.Name
+                                                of selected file.Name of selected file.Name of selected file.Name of
+                                                selected file.Name of selected file.Name of selected file.Name of
+                                                selected file.</span>
+                                        </div>
+                                        <button class="green-btn">Upload</button>
+
+                                </div>
+                            </div>
+
+
+                            <div class="no-files-uploaded-container">
+                                <div class="no-files-uploaded">
+                                    <div class="elements-container">
+                                        <div class="no-files-image-container">
+                                            <img src="../../public/icons/unknownfile/128.png" alt="empty file gray icon">
+                                        </div>
+                                        <label>No uploaded files.</label>
+                                    </div>
+                                </div>
+                            </div>
+
 
                             <div class="document">
 
