Global styling for input validation added.

--- a/dev/styles/global.css
+++ b/dev/styles/global.css
@@ -100,3 +100,10 @@ button:disabled {
 button:disabled:active {
     transform: translateY(0) !important;
 }
+
+input.correct-input {
+    border-color: var(--mint-green) !important;
+}
+input.false-input {
+    border-color: var(--rusty-red) !important;
+}
