--- a/dev/views/profileStudentGrades.html
+++ b/dev/views/profileStudentGrades.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/core.css">
     <link rel="stylesheet" href="../styles/profileMain.css">
     <link rel="stylesheet" href="../styles/profileStudentGrades.css">
+    <link rel="stylesheet" href="../styles/addGradeWindow.css">
 </head>
 
 <body>
@@ -41,6 +42,25 @@
             </div>
         </header>
         <main>
+            
+            <!-- addGradeWindow; show when teacher wants to add a grade -->
+
+            <!-- <div class="add-grade-window-container">
+                <div class="window">
+                    <div class="info">
+                        <div class="question-container">
+                            <p>Grade to add:</p>
+                        </div>
+                        <div class="grade-input-container">
+                            <input type="number" class="correct-input">
+                        </div>
+                    </div>
+                    <div class="controls">
+                        <button class="green-btn">Add Grade</button>
+                        <button class="red-btn">Cancel</button>
+                    </div>
+                </div>
+            </div> -->
 
             <div class="profile-view">
                 <div class="location">
@@ -80,10 +100,13 @@
                         <div class="profile-grades">
 
                             <div class="grid-teil-subject-grades">
-                                <div class="title">
-                                    <span>History</span>
-                                    <span class="extra-infos">Teacher: Michaela Ivanova</span>
-                                    <span class="extra-infos">SubjectID: 2332ht</span>
+                                <div class="upper-container">
+                                    <div class="title">
+                                        <span>History</span>
+                                        <span class="extra-infos">Teacher: Michaela Ivanova</span>
+                                        <span class="extra-infos">SubjectID: 2332ht</span>
+                                    </div>
+                                    <button class="green-btn">Add Grade</button>
                                 </div>
 
                                 <form class="grades-container">
