--- a/dev/views/register.html
+++ b/dev/views/register.html
@@ -46,7 +46,7 @@
                     <div class="register-elements-container">
                         <h2>Register</h2>
                                 <div class="form-group">
-                                     <select class="form-control credentials" name="registerAs" id="registerAs">
+                                     <select class="form-control credentials correct-input" name="registerAs" id="registerAs">
                                         <option value="">Parent or Teacher?</option>
                                         <option value="parent">Parent</option>
                                         <option value="teacher">Teacher</option>
@@ -56,7 +56,7 @@
                                     <span class="error">Error message here!</span>
                                 </div> -->
                                 <div class="form-group">
-                                    <input class="form-control credentials" type="text" name="firstName" placeholder="First Name">
+                                    <input class="form-control credentials false-input" type="text" name="firstName" placeholder="First Name">
                                 </div>
                                 <!-- <div class="error-msg-group">
                                     <span class="error">Error message here!</span>
