Redoing applyNow view.

--- a/dev/styles/applyNow.css
+++ b/dev/styles/applyNow.css
@@ -1,9 +1,16 @@
 .apply-now {
-    height: inherit;
+    height: fit-content;
     width: 100%;
+    border: 2px solid red;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 30px 0;
 }
 
-.apply-now form {
+/* .apply-now form {
     width: 1500px;
     height: fit-content;
     margin: 0 auto;
@@ -12,35 +19,70 @@
     border-radius: 4px;
     color: var(--dim-gray);
     box-shadow: var(--component-box-shadow);
+} */
+
+.apply-now .title-container {
+    font-size: var(--size-title);
+    text-align: center;
 }
 
-.apply-now .apply-now-elements-container {
+.apply-now .form-element {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 30px;
-    text-align: center;
-    color: var(--black);
-
-    h2 {
-        font-size: var(--size-title);
-    }
+    border: 2px solid red;
+    width: 80%;
 }
 
 .apply-now .main-elements {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-}
-.apply-now .input-elements {
-    width: 480px;
-    display: flex;
+    border: 2px solid rgb(0, 102, 255);
 
-    flex-direction: column;
-    gap: 30px;
 }
+
+.apply-now .input-elements {
+    border: 2px solid rgb(0, 255, 187);
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        width: 80%;
+    }
+    .form-group label{
+        font-weight: 100;
+        font-size: var(--size-small-msg);
+    }
+    .form-group input {
+        background: var(--light-cold-gray);
+        border: none;
+        border-bottom: 4px solid var(--gray);
+        border-radius: var(--border-radius);
+        box-shadow: none;
+        outline: none;
+        color: var(--black);
+        text-indent: 8px;
+        height: 42px;
+        width: 100%;
+        font-size: var(--size-description);
+    }
+}
+
 .apply-now .description-elements {
-    width: 380px;
+    border: 2px solid rgb(0, 255, 187);
+    width: 40%;
     padding: 10px;
     background-color: var(--light-cold-gray);
     border-radius: var(--border-radius);
@@ -49,7 +91,7 @@
         color: var(--dim-gray);
         text-align: left;
         display: block;
-        font-size: var(--size-description);
+        font-size: var(--size-text);
         margin-bottom: 15px;
     }
 
@@ -60,7 +102,19 @@
     }
 }
 
-.apply-now .form-group.special-input {
+.apply-now .file-uploads-container {
+    border: 2px solid rgb(85, 0, 255);
+    width: 100%;
+    height: fit-content;
+
+}
+
+.apply-now i{
+    color: var(--rusty-red);
+    font-size: var(--size-description);
+}
+
+/* .apply-now .form-group.special-input {
     display: flex;
     justify-content: left;
     flex-direction: column;
@@ -68,9 +122,9 @@
         max-width: fit-content;
         font-size: var(--size-description);
     }
-}
+} */
 
-.apply-now .radio-container {
+/* .apply-now .radio-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,8 +133,8 @@
         margin-right: 15px;
         font-size: var(--size-option);
     }
-}
-
+} */
+/* 
 .apply-now form .form-control {
     background: var(--light-cold-gray);
     border: none;
@@ -91,15 +145,15 @@
     color: var(--dim-gray);
     text-indent: 8px;
     height: 42px;
-}
+} */
 
-.apply-now form .form-control.credentials {
+/* .apply-now form .form-control.credentials {
     width: 300px;
 }
 
 .apply-now form .btn {
     padding: 15px 70px;
-}
+} */
 
 .apply-now .no-acc-msg {
     color: var(--dim-gray);
@@ -112,20 +166,15 @@
     }
 }
 
-.apply-now .error-msg-group {
+/* error communacation */
+/* show span and edit textContent when error */
+.apply-now .error-msg-container {
     max-height: 100px;
 }
 
-/* error communacation */
-/* show span and edit textContent when error */
-.apply-now span.error {
+.apply-now .error {
     max-width: 100%;
     display: block;
     color: var(--rusty-red);
     font-size: var(--size-error-msg);
-}
-
-/* class to add by false validation */
-.apply-now input.false-input {
-    border-bottom: 4px solid var(--rusty-red);
 }
