--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/navDropdown.css">
     <link rel="stylesheet" href="../styles/applyNow.css">
     <link rel="stylesheet" href="../styles/customFileInput.css">
+    <link rel="stylesheet" href="../styles/customFileUploadComponent.css">
 </head>
 
 <body>
@@ -43,92 +44,121 @@
         </header>
         <main>
             <div class="apply-now">
-                <form>
-                    <div class="apply-now-elements-container">
-                        <h2>Register & Apply to become a student</h2>
 
+
+                <!-- <div class="apply-now-elements-container"> -->
+                    <div class="title-container">
+                        <h2>Register & Apply to become a student</h2>
+                    </div>
+
+                    <form class="form-element">
                         <div class="main-elements">
                             <div class="input-elements">
-
                                 <div class="form-group">
-                                    <input class="form-control credentials false-input" type="text" name="firstName"
-                                        placeholder="First Name">
-                                    <div class="error-msg-group">
+                                    <label for="registerFirstName">First Name<i>*</i></label>
+                                    <input class="false-input" type="text" name="firstName" placeholder="First Name"
+                                        id="registerFirstName">
+                                    <div class="error-msg-container">
                                         <span class="error">Error message here!Error message here!</span>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control credentials" type="text" name="lastName"
-                                        placeholder="Last Name">
-                                    <div class="error-msg-group">
-                                        <span class="error">Error message here!Error message here!Error message
-                                            here!Error message
-                                            here!Error message here!</span>
+                                    <label for="registerLastName">Last Name<i>*</i></label>
+                                    <input class="correct-input" type="text" name="firstName" placeholder="Last Name"
+                                        id="registerLastName">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control credentials" type="email" name="email"
-                                        placeholder="Email">
-                                    <div class="error-msg-group">
-                                        <span class="error">Error message here!Error message here!Error message
-                                            here!Error message
-                                            here!Error message here!</span>
+                                    <label for="registerDateOfBirth">Date Of Birth<i>*</i></label>
+                                    <input type="date" name="dateOfBirth" id="registerDateOfBirth">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="registerEmail">Email<i>*</i></label>
+                                    <input type="text" name="email" id="registerEmail" placeholder="Email">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="registerModileNumber">Modile Number<i>*</i></label>
+                                    <input type="tel" name="mobileNumber" id="registerModileNumber" placeholder="Modile Number">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="registerHomeNumber">Home Number</label>
+                                    <input type="tel" name="homeNumber" id="registerHomeNumber" placeholder="Home Number">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <input class="form-control credentials" type="password" name="password"
-                                        placeholder="Password">
-                                    <div class="error-msg-group">
-                                        <span class="error">Error message here!Error message here!Error message
-                                            here!Error message
-                                            here!Error message here!</span>
+                                    <label for="registerStreet">Street<i>*</i></label>
+                                    <input type="text" name="street" id="registerStreet" placeholder="Street">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control credentials" type="password" name="repeatPassword"
-                                        placeholder="Repeat Password">
-                                    <div class="error-msg-group">
-                                        <span class="error">Error message here!Error message here!Error message
-                                            here!Error message
-                                            here!Error message here!</span>
+                                    <label for="registerHouseNumber">House Number<i>*</i></label>
+                                    <input type="text" name="houseNumber" id="registerHouseNumber" placeholder="House Number">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
                                     </div>
                                 </div>
-
-                                <!-- <div class="form-group special-input">
-                                    <span>Date of birth:</span>
-                                    <input class="form-control credentials" type="date" name="dateOfBirth">
+                                <div class="form-group">
+                                    <label for="registerCity">City<i>*</i></label>
+                                    <input type="text" name="city" id="registerCity" placeholder="City">
+                                    <div class="error-msg-container">
+                                        <span class="error">Error message here!Error message here!</span>
+                                    </div>
                                 </div>
-                                <div class="form-group special-input">
-                                    <span>Upload documents:</span>
-                                    <input class="form-control credentials custom-file-input" type="file" name="filesUploaded" multiple>
-                                </div> -->
-                                <!-- TODO add drag & drop file upload -->
                             </div>
                             <div class="description-elements">
-                                <span>Please fill out this application form. With this you are also creating an account.
-                                    Only the "Upload documents" field is optional. They can be uploaded now or later in
-                                    <a href="#">MY PROFILE</a>. The needed documents are listed under <a href="#">FORMS
+                                <span>Please fill out all mandatory<i>*</i> fields. With this form you are applying and creating an account at the same time. The needed documents are listed under <a href="#">FORMS
                                         & DOCUMENTS</a>.</span>
-                                <span>After submitting the application, please check your email. You will recieve an
-                                    email with a link for email confirmation after a moment. Click the link to activate
-                                    your account. After that you can log in.</span>
-                                <span>We will review your application and send you an answer per Email. In this email
-                                    you will find the "Parental Authentication Code", with which your parents can also
+                                <span>After submitting the application, we will review it and send you an answer per Email as soon as possible. In this email, if accepted,
+                                    you will find a link for email confirmation and the "Parental Authentication Code", with which your parents can also
                                     create accounts.</span>
                                 <span>Having trouble or questions? Please check the <a href="#">FAQ</a> or <a
                                         href="#">CONTACT</a> us.</span>
                             </div>
                         </div>
+                        <div class="file-uploads-container">
+                            <div class="custom-file-upload-component">
 
+                                    
+                                <div class="label-container">
+                                    <label>Profile picture</label>
+                                </div>
+                                <label for="fileUpload" class="custom-file-upload-btn">Select File
+                                    <input type="file" name="profilePicture" id="fileUpload"></input>
+                                </label>
+                                <div class="selected-file-name-container add-margin-top">
+                                    <!-- incert file name in span element -->
+                                    <span></span>
+                                </div>
+                                <!-- <button class="green-btn">Upload</button> -->
+                            
+                            </div>
+                        </div>
                         <div class="form-btn">
                             <button class="btn red-btn" type="submit">Register & Apply</button>
                         </div>
+                    </form>
 
-                        <span class="no-acc-msg">If you already have an account you can <a href="#">Log in</a> right
-                            away.</span>
-                    </div>
-                </form>
+                    <span class="no-acc-msg">If you already have an account you can <a href="#">Log in</a> right
+                        away.</span>
+                <!-- </div> -->
+
+
             </div>
         </main>
     </div>
