--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -48,7 +48,7 @@
 
                 <!-- <div class="apply-now-elements-container"> -->
                     <div class="title-container">
-                        <h2>Register & Apply to become a student</h2>
+                        <h2>Apply now to become a student</h2>
                     </div>
 
                     <form class="form-element">
@@ -85,8 +85,8 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="registerModileNumber">Modile Number<i>*</i></label>
-                                    <input type="tel" name="mobileNumber" id="registerModileNumber" placeholder="Modile Number">
+                                    <label for="registerMobileNumber">Mobile Number<i>*</i></label>
+                                    <input type="tel" name="mobileNumber" id="registerMobileNumber" placeholder="Mobile Number">
                                     <div class="error-msg-container">
                                         <span class="error">Error message here!Error message here!</span>
                                     </div>
@@ -138,12 +138,30 @@
                                 <div class="label-container">
                                     <label>Profile picture</label>
                                 </div>
-                                <label for="fileUpload" class="custom-file-upload-btn">Select File
-                                    <input type="file" name="profilePicture" id="fileUpload"></input>
+                                <label for="fileUploadPicture" class="custom-file-upload-btn">Select Photo
+                                    <input type="file" name="profilePicture" id="fileUploadPicture"></input>
                                 </label>
                                 <div class="selected-file-name-container add-margin-top">
                                     <!-- incert file name in span element -->
                                     <span></span>
+                                </div>
+                                <!-- <button class="green-btn">Upload</button> -->
+                            
+                            </div>
+                            <div class="custom-file-upload-component">
+
+                                    
+                                <div class="label-container">
+                                    <label>Documents<i>*</i></label>
+                                </div>
+                                <label for="fileUploadDocuments" class="custom-file-upload-btn">Select Files
+                                    <input type="file" name="documents" id="fileUploadDocuments" multiple></input>
+                                </label>
+                                <div class="selected-file-name-container add-margin-top">
+                                    <!-- incert file names in span elements -->
+                                    <span>sadfdfsdfsfdsfdsa</span>
+                                    <span>sadfdfsdfsfdsfdsa</span>
+                                    <span>sadfdfsdfsfdsfdsa</span>
                                 </div>
                                 <!-- <button class="green-btn">Upload</button> -->
                             
