Name attribute correction.

--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="registerLastName">Last Name<i>*</i></label>
-                                    <input class="correct-input" type="text" name="firstName" placeholder="Last Name"
+                                    <input class="correct-input" type="text" name="lastName" placeholder="Last Name"
                                         id="registerLastName">
                                     <div class="error-msg-container">
                                         <span class="error">Error message here!Error message here!</span>
