--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <div class="form-btn">
-                            <button class="btn red-btn" type="submit">Register & Apply</button>
+                            <button class="red-btn" type="submit">Apply</button>
                         </div>
                     </form>
 
