--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -120,13 +120,19 @@
                                 </div>
                             </div>
                             <div class="description-elements">
-                                <span>Please fill out all mandatory<i>*</i> fields. With this form you are applying and creating an account at the same time. The needed documents are listed under <a href="#">FORMS
-                                        & DOCUMENTS</a>.</span>
-                                <span>After submitting the application, we will review it and send you an answer per Email as soon as possible. In this email, if accepted,
-                                    you will find a link for email confirmation and the "Parental Authentication Code", with which your parents can also
-                                    create accounts.</span>
-                                <span>Having trouble or questions? Please check the <a href="#">FAQ</a> or <a
-                                        href="#">CONTACT</a> us.</span>
+                                <div>
+                                    <span>Please fill out all mandatory<i>*</i> fields. With this form you are applying and creating an account at the same time. The needed documents are listed under <a href="#">FORMS
+                                            & DOCUMENTS</a>.</span>
+                                </div>
+                                <div>
+                                    <span>After submitting the application, we will review it and send you an answer per Email as soon as possible. In this email, if accepted,
+                                        you will find a link for email confirmation and the "Parental Authentication Code", with which your parents can also
+                                        create accounts.</span>
+                                </div>
+                                <div>
+                                    <span>Having trouble or questions? Please check the <a href="#">FAQ</a> or <a
+                                            href="#">CONTACT</a> us.</span>
+                                </div>
                             </div>
                         </div>
                         <div class="file-uploads-container">
