Description content changed.

--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -126,7 +126,7 @@
                                 </div>
                                 <div>
                                     <span>After submitting the application, we will review it and send you an answer per Email as soon as possible. In this email, if accepted,
-                                        you will find a link for email confirmation and the "Parental Authentication Code", with which your parents can also
+                                        you will find a link for email confirmation and the authentication code, with which your parents can also
                                         create accounts.</span>
                                 </div>
                                 <div>
