--- a/dev/styles/register.css
+++ b/dev/styles/register.css
@@ -1,4 +1,4 @@
-.apply-now {
+.register-view{
     height: fit-content;
     width: 100%;
     border-radius: var(--border-radius);
@@ -11,12 +11,12 @@
     padding: 30px 0;
 }
 
-.apply-now .title-container {
+.register-view .title-container {
     font-size: var(--size-title);
     text-align: center;
 }
 
-.apply-now .form-element {
+.register-view .form-element {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@
     width: 80%;
 }
 
-.apply-now .main-elements {
+.register-view .main-elements {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -35,7 +35,7 @@
 
 }
 
-.apply-now .input-elements {
+.register-view .input-elements {
     /* border: 2px solid rgb(0, 255, 187); */
     width: 40%;
     display: flex;
@@ -55,7 +55,8 @@
         font-weight: 100;
         font-size: var(--size-small-msg);
     }
-    .form-group input {
+    .form-group input,
+    .form-group select {
         background: var(--light-cold-gray);
         border: none;
         border-bottom: 4px solid var(--gray);
@@ -70,19 +71,20 @@
     }
 }
 
-.apply-now .description-elements {
+.register-view .description-elements {
     /* border: 2px solid rgb(0, 255, 187); */
     width: 40%;
     padding: 10px;
     background-color: var(--light-cold-gray);
     border-radius: var(--border-radius);
-    
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     span {
         color: var(--dim-gray);
         text-align: left;
-        display: block;
         font-size: var(--size-text);
-        margin-bottom: 15px;
+        display: block;
     }
 
     a {
@@ -92,7 +94,7 @@
     }
 }
 
-.apply-now .file-uploads-container {
+.register-view .file-uploads-container {
     /* border: 2px solid rgb(85, 0, 255); */
     width: 100%;
     height: fit-content;
@@ -101,12 +103,19 @@
     gap: 30px;
 }
 
-.apply-now i{
+.register-view .form-btn {
+    button {
+        padding: 20px 50px;
+        font-size: var(--size-text);
+    }
+}
+
+.register-view i{
     color: var(--rusty-red);
     font-size: var(--size-description);
 }
 
-.apply-now .no-acc-msg {
+.register-view .no-acc-msg {
     color: var(--dim-gray);
     font-size: var(--size-small-msg);
 
@@ -119,11 +128,11 @@
 
 /* error communacation */
 /* show span and edit textContent when error */
-.apply-now .error-msg-container {
+.register-view .error-msg-container {
     max-height: 100px;
 }
 
-.apply-now .error {
+.register-view .error {
     max-width: 100%;
     display: block;
     color: var(--rusty-red);
