--- a/dev/styles/register.css
+++ b/dev/styles/register.css
@@ -9,6 +9,7 @@
     align-items: center;
     gap: 30px;
     padding: 30px 0;
+    box-shadow: var(--component-box-shadow);
 }
 
 .register-view .title-container {
